--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,13 @@
 # NOTE: requires xlip to be installed!
 
+# determine if we're in a vim window
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 # Ctrl-a = prefix
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
-
-# start counting panes from 1. Why did I put this in?
-set -g base-index 1
 
 # set copy mode to vi
 set-window-option -g mode-keys vi
@@ -19,8 +20,23 @@ set -s escape-time 0
 
 # pretty
 set -g default-terminal "screen-256color"
-set -g pane-active-border-style bg=default,fg=green
-set -g pane-border-style fg=magenta
+set -g window-style 'fg=default,bg=default'
+set -g window-active-style 'fg=default,bg=default'
+
+set -g pane-border-fg colour238
+set -g pane-active-border-fg colour49
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
+set -g status-right "#[fg=cyan]%A, %d %b %Y %I:%M %p"
+
+set -g status-fg white
+set -g status-bg black
+
+set -g window-status-current-fg white
+set -g window-status-current-attr bright
 
 # BEEG history
 set-option -g history-limit 5000
@@ -38,10 +54,20 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
+
+# resize but better
+bind -n M-Left resize-pane -L 5
+bind -n M-Down resize-pane -D 5
+bind -n M-Up resize-pane -U 5
+bind -n M-Right resize-pane -R 5
 
 # better pane switching: \ = vertical, - = horizontal
-bind "\\" split-window -h
-bind - split-window -v
+bind "\\" split-window -h -c "#{pane_current_path}"
+bind "-" split-window -v -c "#{pane_current_path}"
 
 # Width="$(expr $(tmux display -p \"#{window_width}\") / 3)"
 
@@ -65,18 +91,15 @@ bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
 
 
 # remove all swap files
-bind-key -n F3 run-shell 'find . -name *.sw* -delete > /dev/null 2>&1' \;\
+bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
                          display-message "Swap files successfully fucked"
 
 # kill all ruby (cosmos) apps
-bind-key -n F6 run-shell 'killall ruby' \; display-message "Cosmos successfully fucked"
+bind-key -n F6 run-shell -b "killall ruby | echo \"\" > /dev/null 2>&1" \;\
+                            display-message "Cosmos successfully fucked"
 
 # <prefix> r = reload tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
-
-# determine if we're in a vim window
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # Ctrl-e to git status
 bind-key -n C-e if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
@@ -99,3 +122,5 @@ bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
 
 # Ctrl-j = ESC
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "send-keys "
+
+
