--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,14 @@
 # NOTE: requires xlip to be installed!
 
 # determine if we're in a vim window
+# TODO: or ssh
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 # Ctrl-a = prefix
 set-option -g prefix C-a
 unbind-key C-a
+unbind-key C-u
 bind-key C-a send-prefix
 
 # set copy mode to vi
@@ -48,6 +50,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
+bind-key -n page-up send-keys [
 
 # vim-like pane switching
 bind h select-pane -L
@@ -91,6 +94,7 @@ bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
 
 
 # remove all swap files
+#TODO: find out why so slow
 bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
                          display-message "Swap files successfully fucked"
 
@@ -101,22 +105,16 @@ bind-key -n F6 run-shell -b "killall ruby | echo \"\" > /dev/null 2>&1" \;\
 # <prefix> r = reload tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
-# Ctrl-e to git status
-bind-key -n C-e if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
+# Ctrl-w to git status
+bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
                          send-keys 'clear' \; send-keys 'git status'" \
                          "send-keys 'git status'"
-# Ctrl-w to git add file
-bind-key -n C-w if-shell "$is_vim" "send-keys ''" "send-keys 'git add '"
 # Ctrl-o to make a commit message
 bind-key -n C-o if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -m \"\"' OD"
 # Ctrl-l to make an add -u commit message
 bind-key -n C-l if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -am \"\"' OD"
-# Ctrl-h to git push
-bind-key -n C-u if-shell "$is_vim" "send-keys ''" "send-keys 'git push'"
 # Ctrl-f to git diff 
 bind-key -n C-f if-shell "$is_vim" "send-keys ''" "send-keys 'git diff '"
-# Ctrl-y to git pull
-bind-key -n C-y if-shell "$is_vim" "send-keys ''" "send-keys 'git pull'"
 # Ctrl-k to git checkout
 bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
 
