--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,8 @@ set -g default-terminal "screen-256color"
 set -g window-style 'fg=default,bg=default'
 set -g window-active-style 'fg=default,bg=default'
 
-set -g pane-border-fg colour238
-set -g pane-active-border-fg colour49
+set -g pane-border-style fg=colour238
+set -g pane-active-border-style fg=colour49
 
 setw -g monitor-activity on
 set -g visual-activity on
@@ -37,8 +37,8 @@ set -g status-right "#[fg=cyan]%A, %d %b %Y %I:%M %p"
 set -g status-fg white
 set -g status-bg black
 
-set -g window-status-current-fg white
-set -g window-status-current-attr bright
+set -g window-status-current-style fg=white
+set -g window-status-current-style bright
 
 # BEEG history
 set-option -g history-limit 5000
