--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,15 @@
-# NOTE: requires xlip to be installed!
+# NOTE: requires xclip to be installed!
 
 # determine if we're in a vim window
 # TODO: or ssh
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+# for Suds() in vimrc - initialize file to something
+# curr_file="~/.vimrc"
+
+# Disable "lock up everything with no recovery option" mode
+unbind-key C-z
 
 # Ctrl-a = prefix
 set-option -g prefix C-a
@@ -13,6 +19,9 @@ bind-key C-a send-prefix
 
 # set copy mode to vi
 set-window-option -g mode-keys vi
+
+# don't randomly exit buffer mode
+set -g status-interval 0
 
 # mouse
 set -g mouse on
@@ -41,7 +50,7 @@ set -g window-status-current-style fg=white
 set -g window-status-current-style bright
 
 # BEEG history
-set-option -g history-limit 5000
+set-option -g history-limit 10000
 
 # mouse does different buffer stuff
 unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -50,7 +59,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
-bind-key -n page-up send-keys [
+# bind-key -n page-up send-keys [
 
 # vim-like pane switching
 bind h select-pane -L
@@ -81,7 +90,7 @@ bind-key -n F1 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
                         splitw -v -p 15 -c '#{pane_current_path}'\;\
                         send-keys 'clear' \;\
                         send-keys 'cd ~/repos/cosmos-environment \
-                        clear./launcher.py' \; select-pane -t 0" 
+                        clear./launcher.py' \; select-pane -t 2" 
                         
 bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
                         "select-pane -t 0 \;\
@@ -92,15 +101,19 @@ bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
                         splitw -v -p 30 -t 0 -c '#{pane_current_path}'\;\
                         select-pane -t 0"
 
+# Ctrl-b to go back to previous bash cmd (noted by username)
+bind-key -n C-b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward ")brianwillis@"\; send-keys '$'
+bind-key -T copy-mode-vi C-b send-keys -X start-of-line\; send-keys -X search-backward ")brianwillis@"\; send-keys '$'
 
 # remove all swap files
-#TODO: find out why so slow
 bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
                          display-message "Swap files successfully fucked"
 
 # kill all ruby (cosmos) apps
 bind-key -n F6 run-shell -b "killall ruby | echo \"\" > /dev/null 2>&1" \;\
                             display-message "Cosmos successfully fucked"
+
+# bind-key -n F12 send-keys ':qa!' \; run-shell -b "sleep 0.1" \; run-shell -b "vi $curr_file"
 
 # <prefix> r = reload tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
@@ -120,5 +133,3 @@ bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
 
 # Ctrl-j = ESC
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "send-keys "
-
-
