--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,8 +102,8 @@ bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
                         select-pane -t 0"
 
 # Ctrl-b to go back to previous bash cmd (noted by username)
-bind-key -n C-b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward ")brianwillis@"\; send-keys '$'
-bind-key -T copy-mode-vi C-b send-keys -X start-of-line\; send-keys -X search-backward ")brianwillis@"\; send-keys '$'
+bind-key -n C-b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward "brianwillis@CA-SF-L045"\; send-keys '$'
+bind-key -T copy-mode-vi C-b send-keys -X start-of-line\; send-keys -X search-backward "brianwillis@CA-SF-L045"\; send-keys '$'
 
 # remove all swap files
 bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
