--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,5 @@
 set show-mode-in-prompt on
-set vi-cmd-mode-string "\1\e[1;31m\2(cmd)\1\e[0m\2"
-set vi-ins-mode-string "\1\e[37m\2(ins)\1\e[0m\2"
+set vi-cmd-mode-string "\1\e[2 q\2"
+set vi-ins-mode-string "\1\e[6 q\2"
 
 set editing-mode vi
