--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,6 @@
+# More ""user-friendly"" vim stuff
 set show-mode-in-prompt on
-set vi-cmd-mode-string "\1\e[2 q\2"
 set vi-ins-mode-string "\1\e[6 q\2"
+set vi-cmd-mode-string "\1\e[2 q\2"
 
 set editing-mode vi
