--- a/.ackrc
+++ b/.ackrc
@@ -1,8 +1,10 @@
 # Always color, even when piping
 --color
 
-# Ignore Cosmos outputs dir
---ignore-dir=~/repos/cosmos-environment/outputs
-
-# Always ignore tags files
+# Ignore shit
 --ignore-file=is:tags
+--ignore-file=ext:o
+--ignore-file=ext:run
+--ignore-file=ext:png
+--ignore-file=ext:svg
+--ignore-file=ext:jpg
