--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,6 @@
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-# for Suds() in vimrc - initialize file to something
-# curr_file="~/.vimrc"
-
 # Disable "lock up everything with no recovery option" mode
 unbind-key C-z
 
@@ -81,44 +78,21 @@ bind -n M-Right resize-pane -R 5
 bind "\\" split-window -h -c "#{pane_current_path}"
 bind "-" split-window -v -c "#{pane_current_path}"
 
-# Width="$(expr $(tmux display -p \"#{window_width}\") / 3)"
-
-# split into cool windows F1 = 3 windows for python, F2 = 4/5 windows for c
-bind-key -n F1 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
-                        "" \
-                        "splitw -h -p 50 -c '#{pane_current_path}'\;\
-                        splitw -v -p 15 -c '#{pane_current_path}'\;\
-                        send-keys 'clear' \;\
-                        send-keys 'cd ~/repos/cosmos-environment \
-                        clear./launcher.py' \; select-pane -t 2" 
-                        
-bind-key -n F2 if-shell "[ $(tmux list-panes | wc -l) -eq 4 ]" \
-                        "select-pane -t 0 \;\
-                         splitw -h -p 50 -c '#{pane_current_path}'\;\
-                        resize-pane -x 175 -t 2" \
-                        "splitw -h -p 50 -c '#{pane_current_path}'\;\
-                        splitw -v -p 32 -c '#{pane_current_path}'\;\
-                        splitw -v -p 30 -t 0 -c '#{pane_current_path}'\;\
-                        select-pane -t 0"
-
 # Ctrl-b to go back to previous bash cmd (noted by username)
-bind-key -n C-b copy-mode\; send-keys -X start-of-line\; send-keys -X search-backward "brianwillis@CA-SF-L045"\; send-keys '$'
-bind-key -T copy-mode-vi C-b send-keys -X start-of-line\; send-keys -X search-backward "brianwillis@CA-SF-L045"\; send-keys '$'
+bind-key -n C-b copy-mode\; send-keys -X start-of-line \;\
+                send-keys -X search-backward "brianwillis@"\; send-keys '$'
+bind-key -T copy-mode-vi C-b send-keys -X start-of-line \;\
+                             send-keys -X search-backward "brianwillis@"\; send-keys '$'
 
 # remove all swap files
 bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
                          display-message "Swap files successfully fucked"
 
-# kill all ruby (cosmos) apps
-bind-key -n F6 run-shell -b "killall ruby | echo \"\" > /dev/null 2>&1" \;\
-                            display-message "Cosmos successfully fucked"
-
-# bind-key -n F12 send-keys ':qa!' \; run-shell -b "sleep 0.1" \; run-shell -b "vi $curr_file"
-
-# <prefix> r = reload tmux.conf
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
+# <prefix> R = reload tmux.conf
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
 # Ctrl-w to git status
+#TODO: check if no chars on screen already
 bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
                          send-keys 'clear' \; send-keys 'git status'" \
                          "send-keys 'git status'"
