--- a/.ackrc
+++ b/.ackrc
@@ -1,10 +1,20 @@
 # Always color, even when piping
 --color
 
+# Default to follow symlinks
+--follow
+
 # Ignore shit
+--ignore-dir=build
+
 --ignore-file=is:tags
+
 --ignore-file=ext:o
+--ignore-file=ext:so
 --ignore-file=ext:run
 --ignore-file=ext:png
 --ignore-file=ext:svg
 --ignore-file=ext:jpg
+--ignore-file=ext:ixf
+--ignore-file=ext:cxf
+--ignore-file=ext:om
