--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 # Disable "lock up everything with no recovery option" mode
 unbind-key C-z
 
+ # Remap to fullscreen
+bind-key C-z resize-pane -Z
+
 # Ctrl-a = prefix
 set-option -g prefix C-a
 unbind-key C-a
@@ -17,11 +20,8 @@ bind-key C-a send-prefix
 # set copy mode to vi
 set-window-option -g mode-keys vi
 
-# don't randomly exit buffer mode
-set -g status-interval 0
-
-# mouse
-set -g mouse on
+# update the status bar once a second
+set -g status-interval 1
 
 # don't use escape as meta key
 set -s escape-time 0
@@ -37,8 +37,9 @@ set -g pane-active-border-style fg=colour49
 setw -g monitor-activity on
 set -g visual-activity on
 
+set -g status-right-length 200
 set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
-set -g status-right "#[fg=cyan]%A, %d %b %Y %I:%M %p"
+set -g status-right "#[fg=colour79]%A, %d %b %Y %I:%M %p PT :: #(TZ=UTC date -u +%%H:%%M:%%S) UTC"
 
 set -g status-fg white
 set -g status-bg black
@@ -47,16 +48,44 @@ set -g window-status-current-style fg=white
 set -g window-status-current-style bright
 
 # BEEG history
-set-option -g history-limit 10000
+set-option -g history-limit 12000
 
-# mouse does different buffer stuff
-unbind -T copy-mode-vi MouseDragEnd1Pane
+############## mouse things ##############
+set -g mouse on
+
+# fuck your mouse shit
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+unbind-key -T copy-mode-vi DoubleClick1Pane
+unbind-key -T copy-mode-vi TripleClick1Pane
+unbind-key -T copy-mode    DoubleClick1Pane
+unbind-key -T copy-mode    TripleClick1Pane
+unbind-key -T copy-mode    MouseDown1Pane
+unbind-key -T copy-mode    MouseDrag1Pane
+unbind-key -T copy-mode    MouseDragEnd1Pane
+unbind-key -n              MouseDown1Status
+unbind-key -n              DoubleClick1Pane
+unbind-key -n              TripleClick1Pane
+unbind-key -n              M-MouseDown3Pane
 
 # copy and paste using mouse
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -i"
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send -X clear-selection
-# bind-key -n page-up send-keys [
+bind-key -T copy-mode-vi y              send-keys -X copy-pipe "xclip -selection clipboard -i"
+bind-key -T copy-mode-vi v              send-keys -X begin-selection
+bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
+
+# double click highlight
+bind-key -n              SecondClick1Pane if-shell "$is_vim" \
+                                                   "send-keys -M DoubleClick1Pane" \
+                                                   "select-pane \;\
+                                                    copy-mode \;\
+                                                    send-keys -X select-word"
+bind-key -T copy-mode-vi DoubleClick1Pane select-pane \;\
+                                          send-keys -X select-word-no-clear
+##########################################
+
+
+# page-up and C-U goes into buffer mode one page up if not in vim
+bind-key -n PageUp if-shell "$is_vim" "send-keys PageUp" "copy-mode -eu"
+bind-key -n C-u if-shell "$is_vim" "send-keys ''" "copy-mode \; send-keys ''"
 
 # vim-like pane switching
 bind h select-pane -L
@@ -69,9 +98,9 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 
 # resize but better
-bind -n M-Left resize-pane -L 5
-bind -n M-Down resize-pane -D 5
-bind -n M-Up resize-pane -U 5
+bind -n M-Left  resize-pane -L 5
+bind -n M-Down  resize-pane -D 5
+bind -n M-Up    resize-pane -U 5
 bind -n M-Right resize-pane -R 5
 
 # better pane switching: \ = vertical, - = horizontal
@@ -79,17 +108,21 @@ bind "\\" split-window -h -c "#{pane_current_path}"
 bind "-" split-window -v -c "#{pane_current_path}"
 
 # Ctrl-b to go back to previous bash cmd (noted by username)
-bind-key -n C-b copy-mode\; send-keys -X start-of-line \;\
-                send-keys -X search-backward "brianwillis@"\; send-keys '$'
+bind-key -n C-b              copy-mode \;\
+                             send-keys -X start-of-line \;\
+                             send-keys -X search-backward "^\\S*@.*([^:]*):*" \; send-keys '^'
 bind-key -T copy-mode-vi C-b send-keys -X start-of-line \;\
-                             send-keys -X search-backward "brianwillis@"\; send-keys '$'
+                             send-keys -X search-backward "^\\S*@.*([^:]*):*" \; send-keys '^'
+
+# kill all detached tmux windows
+bind-key -n F2 run-shell "tmux list-sessions | grep -v ' \(attached\)' | cut -d: -f1 | xargs -n 1 tmux kill-session -t"
 
 # remove all swap files
-bind-key -n F3 run-shell "find . -name \"*.sw*\" -delete | echo \"\" > /dev/null 2>&1" \;\
+bind-key -n F3 run-shell "find $PWD -name \"*.sw*\" -delete > /dev/null 2>&1" \;\
                          display-message "Swap files successfully fucked"
 
-# <prefix> R = reload tmux.conf
-bind R source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
+# <prefix> r = reload tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
 # Ctrl-w to git status
 #TODO: check if no chars on screen already
@@ -100,7 +133,7 @@ bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
 bind-key -n C-o if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -m \"\"' OD"
 # Ctrl-l to make an add -u commit message
 bind-key -n C-l if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -am \"\"' OD"
-# Ctrl-f to git diff 
+# Ctrl-f to git diff
 bind-key -n C-f if-shell "$is_vim" "send-keys ''" "send-keys 'git diff '"
 # Ctrl-k to git checkout
 bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
