--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,7 +67,7 @@ unbind-key -n              DoubleClick1Pane
 unbind-key -n              TripleClick1Pane
 unbind-key -n              M-MouseDown3Pane
 
-# copy and paste using mouse
+# copy and paste
 bind-key -T copy-mode-vi y              send-keys -X copy-pipe "xclip -selection clipboard -i"
 bind-key -T copy-mode-vi v              send-keys -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
@@ -115,10 +115,11 @@ bind-key -T copy-mode-vi C-b send-keys -X start-of-line \;\
                              send-keys -X search-backward "^\\S*@.*([^:]*):*" \; send-keys '^'
 
 # kill all detached tmux windows
-bind-key -n F2 run-shell "tmux list-sessions | grep -v ' \(attached\)' | cut -d: -f1 | xargs -n 1 tmux kill-session -t"
+bind-key -n F2 run-shell "tmux list-sessions | grep -v ' \(attached\)' | cut -d: -f1 | xargs -n 1 tmux kill-session -t 2>/dev/null || true" \;\
+                         display-message "Old tmux sessions successfully fucked"
 
 # remove all swap files
-bind-key -n F3 run-shell "find $PWD -name \"*.sw*\" -delete > /dev/null 2>&1" \;\
+bind-key -n F3 run-shell "rm -rf `find '#{pane_current_path}' -type f -name \"*.sw*\"`" \;\
                          display-message "Swap files successfully fucked"
 
 # <prefix> r = reload tmux.conf
@@ -126,9 +127,10 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
 # Ctrl-w to git status
 #TODO: check if no chars on screen already
-bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
-                         send-keys 'clear' \; send-keys 'git status'" \
-                         "send-keys 'git status'"
+# bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
+                                    # send-keys 'clear' \; send-keys 'git status'" \
+                         # "send-keys 'git status'"
+bind-key -n C-w if-shell "$is_vim" "send-keys ''" "send-keys 'git status'"
 # Ctrl-o to make a commit message
 bind-key -n C-o if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -m \"\"' OD"
 # Ctrl-l to make an add -u commit message
