--- a/.inputrc
+++ b/.inputrc
@@ -4,3 +4,6 @@ set vi-ins-mode-string "\1\e[6 q\2"
 set vi-cmd-mode-string "\1\e[2 q\2"
 
 set editing-mode vi
+
+# No highlighting on paste
+set enable-bracketed-paste off
