--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set -g visual-activity on
 
 set -g status-right-length 200
 set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
-set -g status-right "#[fg=colour79]%A, %d %b %Y %I:%M %p PT :: #(TZ=UTC date -u +%%H:%%M:%%S) UTC"
+set -g status-right "#[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
 
 set -g status-fg white
 set -g status-bg black
@@ -55,16 +55,10 @@ set -g mouse on
 
 # fuck your mouse shit
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
-unbind-key -T copy-mode-vi DoubleClick1Pane
-unbind-key -T copy-mode-vi TripleClick1Pane
-unbind-key -T copy-mode    DoubleClick1Pane
-unbind-key -T copy-mode    TripleClick1Pane
 unbind-key -T copy-mode    MouseDown1Pane
 unbind-key -T copy-mode    MouseDrag1Pane
 unbind-key -T copy-mode    MouseDragEnd1Pane
 unbind-key -n              MouseDown1Status
-unbind-key -n              DoubleClick1Pane
-unbind-key -n              TripleClick1Pane
 unbind-key -n              M-MouseDown3Pane
 
 # copy and paste
@@ -72,14 +66,24 @@ bind-key -T copy-mode-vi y              send-keys -X copy-pipe "xclip -selection
 bind-key -T copy-mode-vi v              send-keys -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
 
-# double click highlight
-bind-key -n              SecondClick1Pane if-shell "$is_vim" \
-                                                   "send-keys -M DoubleClick1Pane" \
+# triple click highlight
+bind-key -n              TripleClick1Pane if-shell "$is_vim" \
+                                                   "send-keys -M TripleClick1Pane" \
                                                    "select-pane \;\
                                                     copy-mode \;\
+                                                    send-keys -X select-line"
+bind-key -T copy-mode-vi TripleClick1Pane select-pane \;\
+                                          send-keys -X select-line
+
+
+# double click highlight
+bind-key -n              DoubleClick1Pane if-shell "$is_vim" \
+                                                   "send-keys -M DoubleClick1Pane" \
+                                                   "select-pane \;\
+                                                    copy-mode  \;\
                                                     send-keys -X select-word"
 bind-key -T copy-mode-vi DoubleClick1Pane select-pane \;\
-                                          send-keys -X select-word-no-clear
+                                          send-keys -X select-word
 ##########################################
 
 
@@ -108,11 +112,15 @@ bind "\\" split-window -h -c "#{pane_current_path}"
 bind "-" split-window -v -c "#{pane_current_path}"
 
 # Ctrl-b to go back to previous bash cmd (noted by username)
-bind-key -n C-b              copy-mode \;\
-                             send-keys -X start-of-line \;\
-                             send-keys -X search-backward "^\\S*@.*([^:]*):*" \; send-keys '^'
-bind-key -T copy-mode-vi C-b send-keys -X start-of-line \;\
-                             send-keys -X search-backward "^\\S*@.*([^:]*):*" \; send-keys '^'
+bind-key -n C-b              if-shell "$is_vim" "" \
+                             "copy-mode \;\
+                              send-keys -X start-of-line \;\
+                              send-keys -X search-backward '^brianwillis@.*([^:]*):*' \;\
+                              send-keys '^'"
+bind-key -T copy-mode-vi C-b if-shell "$is_vim" "" \
+                             "send-keys -X start-of-line \;\
+                              send-keys -X search-backward '^brianwillis@.*([^:]*):*' \;\
+                              send-keys '^'"
 
 # kill all detached tmux windows
 bind-key -n F2 run-shell "tmux list-sessions | grep -v ' \(attached\)' | cut -d: -f1 | xargs -n 1 tmux kill-session -t 2>/dev/null || true" \;\
@@ -126,7 +134,6 @@ bind-key -n F3 run-shell "rm -rf `find '#{pane_current_path}' -type f -name \"*.
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
 # Ctrl-w to git status
-#TODO: check if no chars on screen already
 # bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
                                     # send-keys 'clear' \; send-keys 'git status'" \
                          # "send-keys 'git status'"
