--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
+vpn_is_connected="if [ `mullvad status | cut -c -9 | grep Connected` ]; then echo '🐸'; else echo '❌'; fi"
+
 # Disable "lock up everything with no recovery option" mode
 unbind-key C-z
 
@@ -39,7 +41,7 @@ set -g visual-activity on
 
 set -g status-right-length 200
 set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
-set -g status-right "#[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
+set -g status-right "VPN: #($vpn_is_connected)  #[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
 
 set -g status-fg white
 set -g status-bg black
@@ -115,11 +117,11 @@ bind "-" split-window -v -c "#{pane_current_path}"
 bind-key -n C-b              if-shell "$is_vim" "" \
                              "copy-mode \;\
                               send-keys -X start-of-line \;\
-                              send-keys -X search-backward '^brianwillis@.*([^:]*):*' \;\
+                              send-keys -X search-backward '^bran@.*([^:]*):*' \;\
                               send-keys '^'"
 bind-key -T copy-mode-vi C-b if-shell "$is_vim" "" \
                              "send-keys -X start-of-line \;\
-                              send-keys -X search-backward '^brianwillis@.*([^:]*):*' \;\
+                              send-keys -X search-backward '^bran@.*([^:]*):*' \;\
                               send-keys '^'"
 
 # kill all detached tmux windows
