--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,6 @@
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-vpn_is_connected="if [ `mullvad status | cut -c -9 | grep Connected` ]; then echo '🐸'; else echo '❌'; fi"
-
 # Disable "lock up everything with no recovery option" mode
 unbind-key C-z
 
@@ -41,10 +39,10 @@ set -g visual-activity on
 
 set -g status-right-length 200
 set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
-set -g status-right "VPN: #($vpn_is_connected)  #[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
+set -g status-right "#[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
 
 set -g status-fg white
-set -g status-bg black
+set -g status-bg grey19
 
 set -g window-status-current-style fg=white
 set -g window-status-current-style bright
@@ -136,9 +134,6 @@ bind-key -n F3 run-shell "rm -rf `find '#{pane_current_path}' -type f -name \"*.
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
 # Ctrl-w to git status
-# bind-key -n C-w if-shell "$is_vim" "splitw -v -p 50 -c '#{pane_current_path}'\;\
-                                    # send-keys 'clear' \; send-keys 'git status'" \
-                         # "send-keys 'git status'"
 bind-key -n C-w if-shell "$is_vim" "send-keys ''" "send-keys 'git status'"
 # Ctrl-o to make a commit message
 bind-key -n C-o if-shell "$is_vim" "send-keys ''" "send-keys 'git commit -m \"\"' OD"
