--- a/.ackrc
+++ b/.ackrc
@@ -18,3 +18,6 @@
 --ignore-file=ext:ixf
 --ignore-file=ext:cxf
 --ignore-file=ext:omc
+--ignore-file=ext:hex
+--ignore-file=ext:axf
+--ignore-file=ext:bin
