--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,12 @@
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-vpn_is_connected="if [ `mullvad status | cut -c -9 | grep Connected` ]; then echo '🐸'; else echo '❌'; fi"
+# output: no vpn installed : ""
+#         vpn on: frog
+#         vpn off: X
+vpn_is_connected="if [ `mullvad status 2>/dev/null ; echo $? | grep -v ^0` ] ; then echo ''; \
+                  elif [ `mullvad status 2>/dev/null | cut -c -9 | grep Connected` ]; then echo 'VPN: 🐸'; \
+                  else echo 'VPN: ❌'; fi"
 
 
 # Disable "lock up everything with no recovery option" mode
@@ -42,7 +47,7 @@ set -g visual-activity on
 
 set -g status-right-length 200
 set -g status-left "#[fg=green][#S] #[fg=yellow](#P) "
-set -g status-right "VPN: #($vpn_is_connected)  #[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
+set -g status-right "#($vpn_is_connected)  #[fg=colour79]#(date '+%%A %%D %%I:%%M:%%S %%p %%Z') :: #(date -u '+%%D %%H:%%M:%%S %%Z')"
 
 set -g status-fg white
 set -g status-bg grey19
@@ -65,7 +70,7 @@ unbind-key -n              MouseDown1Status
 unbind-key -n              M-MouseDown3Pane
 
 # copy and paste
-bind-key -T copy-mode-vi y              send-keys -X copy-pipe "xclip -selection clipboard -i"
+bind-key -T copy-mode-vi y              send-keys -X copy-pipe "clip.exe -selection clipboard -i"
 bind-key -T copy-mode-vi v              send-keys -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
 
@@ -147,5 +152,14 @@ bind-key -n C-f if-shell "$is_vim" "send-keys ''" "send-keys 'git diff '"
 # Ctrl-k to git checkout
 bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
 
+# Ctrl-g to make a github comment
+bind-key -n C-g if-shell "$is_vim" "send-keys ''" \
+                         "send-keys 'vicd ~/repos/FSW-tickets ; gh issue create --title \"\" --body \"\" --assignee @me ; cd -ggf\"l'"
+
 # Ctrl-j = ESC
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "send-keys "
+
+
+# Resurrection
+set -g @resurrect-strategy-vim 'session'
+run-shell ~/repos/willis_config/tmux-resurrect/resurrect.tmux
