add tendeg shit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,12 +120,12 @@ bind "\\" split-window -h -c "#{pane_current_path}"
 bind "-" split-window -v -c "#{pane_current_path}"
 
 # Ctrl-b to go back to previous bash cmd (noted by username)
-bind-key -n C-b              if-shell "$is_vim" "" \
+bind-key -n C-b              if-shell "$is_vim" "send-keys " \
                              "copy-mode \;\
                               send-keys -X start-of-line \;\
                               send-keys -X search-backward '^bran@.*([^:]*):*' \;\
                               send-keys '^'"
-bind-key -T copy-mode-vi C-b if-shell "$is_vim" "" \
+bind-key -T copy-mode-vi C-b if-shell "$is_vim" "send-keys " \
                              "send-keys -X start-of-line \;\
                               send-keys -X search-backward '^bran@.*([^:]*):*' \;\
                               send-keys '^'"
@@ -141,6 +141,7 @@ bind-key -n F3 run-shell "rm -rf `find '#{pane_current_path}' -type f -name \"*.
 # <prefix> r = reload tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded ^_^"
 
+# TODO: determind if in vim command mode on terminal first...
 # Ctrl-w to git status
 bind-key -n C-w if-shell "$is_vim" "send-keys ''" "send-keys 'git status'"
 # Ctrl-o to make a commit message
@@ -153,8 +154,19 @@ bind-key -n C-f if-shell "$is_vim" "send-keys ''" "send-keys 'git diff '"
 bind-key -n C-k if-shell "$is_vim" "send-keys ''" "send-keys 'git checkout '"
 
 # Ctrl-g to make a github comment
+# Use `v` in command mode to enter a bash vim window, delay a moment,
+# then set some linewrap settings and enter in a default ticket string
+gh_ticket_cmd="\
+cd ~/repos/FSW-tickets\
+gh issue create --title \"\" --body \"\
+\
+\" --assignee @me\
+cd -"
+vim_set_ticket_setttings=":set co=120:set wrap:set linebreak:set wrapmargin=0"
 bind-key -n C-g if-shell "$is_vim" "send-keys ''" \
-                         "send-keys 'vicd ~/repos/FSW-tickets ; gh issue create --title \"\" --body \"\" --assignee @me ; cd -ggf\"l'"
+                         "send-keys 'v' \;\
+                          run-shell 'sleep 0.3' \;\
+                          send-keys '$vim_set_ticket_setttings i$gh_ticket_cmd3kf\"l'"
 
 # Ctrl-j = ESC
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "send-keys "
