--- a/.ackrc
+++ b/.ackrc
@@ -21,3 +21,7 @@
 --ignore-file=ext:hex
 --ignore-file=ext:axf
 --ignore-file=ext:bin
+--ignore-file=ext:uvprojx
+--ignore-file=ext:sln
+--ignore-file=ext:csproj
+--ignore-file=ext:vcxproj
