--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ unbind-key -n              MouseDown1Status
 unbind-key -n              M-MouseDown3Pane
 
 # Copy and paste
-bind-key -T copy-mode-vi y              send-keys -X copy-pipe "clip.exe -selection clipboard -i"
+bind-key -T copy-mode-vi y              send-keys -X copy-pipe "xclip -selection clipboard -i"
 bind-key -T copy-mode-vi v              send-keys -X begin-selection
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
 
