--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tmux-resurrect"]
 	path = tmux-resurrect
 	url = https://github.com/tmux-plugins/tmux-resurrect.git
+[submodule "tmux-open"]
+	path = tmux-open
+	url = https://github.com/tmux-plugins/tmux-open
